templates/radar-upload-connect-frontend_template.yaml
---
# Source: radar-upload-connect-frontend/templates/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: release-name-radar-upload-connect-frontend
  labels:
    helm.sh/chart: radar-upload-connect-frontend-0.3.1
    app.kubernetes.io/name: radar-upload-connect-frontend
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.5.10"
    app.kubernetes.io/managed-by: Helm
spec:
  podSelector:
    matchLabels:
      helm.sh/chart: radar-upload-connect-frontend-0.3.1
      app.kubernetes.io/name: radar-upload-connect-frontend
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/version: "0.5.10"
      app.kubernetes.io/managed-by: Helm
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: 'default'
      podSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
  policyTypes:
  - Ingress
  - Egress
---
# Source: radar-upload-connect-frontend/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-radar-upload-connect-frontend
  labels:
    helm.sh/chart: radar-upload-connect-frontend-0.3.1
    app.kubernetes.io/name: radar-upload-connect-frontend
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.5.10"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: radar-upload-connect-frontend
    app.kubernetes.io/instance: release-name
---
# Source: radar-upload-connect-frontend/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-radar-upload-connect-frontend
  labels:
    helm.sh/chart: radar-upload-connect-frontend-0.3.1
    app.kubernetes.io/name: radar-upload-connect-frontend
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.5.10"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: radar-upload-connect-frontend
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: radar-upload-connect-frontend
        app.kubernetes.io/instance: release-name
    spec:
      securityContext:
        {}
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: "app.kubernetes.io/name"
                    operator: In
                    values:
                    - radar-upload-connect-frontend
                  - key: "app.kubernetes.io/instance"
                    operator: In
                    values:
                    - release-name
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: radar-upload-connect-frontend
          securityContext:
            {}
          image: "radarbase/radar-upload-connect-frontend:0.5.10"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 300
            timeoutSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
---
# Source: radar-upload-connect-frontend/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-radar-upload-connect-frontend
  labels:
    helm.sh/chart: radar-upload-connect-frontend-0.3.1
    app.kubernetes.io/name: radar-upload-connect-frontend
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "0.5.10"
    app.kubernetes.io/managed-by: Helm
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - "localhost"
      secretName: radar-base-tls-radar-upload-connect-frontend
  rules:
    - host: "localhost"
      http:
        paths:
          - path: "/upload/?(.*)"
            pathType: ImplementationSpecific
            backend:
              service:
                name: release-name-radar-upload-connect-frontend
                port:
                  number: 80
---
# Source: radar-upload-connect-frontend/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-radar-upload-connect-frontend-test-connection"
  labels:
    app.kubernetes.io/name: radar-upload-connect-frontend
    helm.sh/chart: radar-upload-connect-frontend-0.3.1
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args:  ['release-name-radar-upload-connect-frontend:80']
  restartPolicy: Never
